Allow resetting value type properties

Fixes: QTBUG-60909
Change-Id: I589c0b30cead134f746def2ffc853ff43d2598e0
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>